[gd_scene load_steps=2 format=3 uid="uid://rq0o3jd5x7t"]

[ext_resource type="Script" path="res://scenes/ui/GameUI.gd" id="1_xjfnr"]

[node name="GameUi" type="Node2D"]
script = ExtResource("1_xjfnr")

[node name="HBoxContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="LivesLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
